// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Internal mutation.addProposalsFromCsv should import 1`] = `
Object {
  "addProposalsFromCsv": Object {
    "badLines": Array [
      2,
      3,
    ],
    "duplicates": Array [
      5,
    ],
    "errorCode": null,
    "importableProposals": 0,
    "importedProposals": Object {
      "edges": Array [
        Object {
          "node": Object {
            "facebookUrl": "https://facebook.com/user/toto",
            "title": "test OK",
            "webPageUrl": "https://perdu.com",
          },
        },
      ],
    },
    "mandatoryMissing": Array [
      6,
    ],
  },
}
`;

exports[`Internal mutation.addProposalsFromCsv should not import 1`] = `
Object {
  "addProposalsFromCsv": Object {
    "badLines": Array [
      2,
      3,
    ],
    "duplicates": Array [
      5,
    ],
    "errorCode": null,
    "importableProposals": 1,
    "importedProposals": Object {
      "edges": Array [],
    },
    "mandatoryMissing": Array [
      6,
    ],
  },
}
`;
